--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -13,8 +13,8 @@
 # Plural rules can be found here: http://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html
 #-------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-[RefineResults]
-description = "Refine results"
+[FilterResults]
+description = "Filter results"
 other = "Mireinio'r canlyniadau"
 
 [ContentTypesToShow]
