--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -13,9 +13,9 @@
 # Plural rules can be found here: http://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html
 #-------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-[RefineResults]
-description = "Refine results"
-other = "Refine results"
+[FilterResults]
+description = "Filter results"
+other = "Filter results"
 
 [ContentTypesToShow]
 description = "Content types to show"
