add product page to translation files

--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -81,6 +81,11 @@ description = "Corporate Information"
 one = "Corporate Information"
 other = "Corporate Information"
 
+[ProductPage]
+description = "Topic"
+one = "Topic"
+other = "Topic"
+
 [And]
 description = "and"
 one = "and"
