Added handler; Removed the search prefix to reuse partials

--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -26,6 +26,16 @@ description = "Content type"
 one = "Math o gynnwys"
 other = "Math o gynnwys"
 
+[PopulationTypes]
+description = "Population type"
+one = "Population type"
+other = "Population type"
+
+[Dimensions]
+description = "Dimensions"
+one = "Dimensions"
+other = "Dimensions"
+
 [ClearAll]
 description = "Clear all"
 one = "Clirio'r cyfan"
