--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -40,6 +40,10 @@ other = "Dimensions"
 description = "Clear all"
 one = "Clirio'r cyfan"
 
+[ClearAllFilters]
+description = "clear all filters"
+one = "clear all filters"
+
 [Publication]
 description = "Cyhoeddiadau"
 other = "Cyhoeddiadau"
@@ -205,3 +209,15 @@ one = "Rhoi cynnig ar"
 [Or]
 description = "or"
 one = "neu" 
+
+[NoResultsHeader]
+description = "Sorry, there are no matching results."
+one = "Sorry, there are no matching results."
+
+[NoResultsSelectAnother]
+description = "Select another topic"
+one = "Select another topic"
+
+[NoResultsBody]
+description = "Not all census content has been released. Check for upcoming releases in the <a href=\"/releasecalendar\">release calendar</a>. Alternatively, you can create a <a href=\"/datasets/create\">custom dataset</a>."
+one = "Not all census content has been released. Check for upcoming releases in the <a href=\"/releasecalendar\">release calendar</a>. Alternatively, you can create a <a href=\"/datasets/create\">custom dataset</a>."
