Add welsh translation

--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -42,7 +42,7 @@ one = "Clirio'r cyfan"
 
 [ClearAllFilters]
 description = "clear all filters"
-one = "clear all filters"
+one = "clirio pob hidlydd"
 
 [Publication]
 description = "Cyhoeddiadau"
@@ -212,12 +212,12 @@ one = "neu"
 
 [NoResultsHeader]
 description = "Sorry, there are no matching results."
-one = "Sorry, there are no matching results."
+one = "Nid oes unrhyw ganlyniadau cyfatebol"
 
 [NoResultsSelectAnother]
 description = "Select another topic"
-one = "Select another topic"
+one = "Dewis pwnc arall"
 
 [NoResultsBody]
 description = "Not all census content has been released. Check for upcoming releases in the <a href=\"/releasecalendar\">release calendar</a>. Alternatively, you can create a <a href=\"/datasets/create\">custom dataset</a>."
-one = "Not all census content has been released. Check for upcoming releases in the <a href=\"/releasecalendar\">release calendar</a>. Alternatively, you can create a <a href=\"/datasets/create\">custom dataset</a>."
+one = "Nid yw holl gynnwys y cyfrifia wedi'i ryddhau. Edrychwch am ddatganiadau sydd i ddod ar y <a href=\"/releasecalendar\">calendr datganiadau</a>. Fel arall, gallwch <a href=\"/datasets/create\">greu set ddata eich fun</a>."
