sorted the filters on census/find-a-dataset

--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -32,9 +32,9 @@ one = "Population type"
 other = "Population type"
 
 [Dimensions]
-description = "Dimensions"
-one = "Dimensions"
-other = "Dimensions"
+description = "Keywords"
+one = "Keywords"
+other = "Keywords"
 
 [ClearAll]
 description = "Clear all"
