--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -26,6 +26,11 @@ description = "Content type"
 one = "Content type"
 other = "Content type"
 
+[SelectContentType]
+description = "Select content type"
+one = "Select content type"
+other = "Select content types"
+
 [PopulationTypes]
 description = "Population type"
 one = "Population type"
@@ -101,6 +106,21 @@ other = "Veterans"
 description = "Census"
 one = "Census"
 other = "Census"
+
+[CensusTopic]
+description = "Select census topic"
+one = "Select census topic"
+other = "Select census topics"
+
+[CensusSubTopics]
+description = "Select census subtopics"
+one = "Select census subtopic"
+other = "Select census subtopics"
+
+[Select]
+description = "Select "
+one = "Select "
+other = "Select "
 
 [StatisticalBulletin]
 description = "Statistical bulletins"
