--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -17,6 +17,11 @@
 description = "Filter"
 other = "Filter"
 
+[Updated]
+one = "Updated"
+description = "Updated"
+other = "Updated"
+
 [ContentTypesToShow]
 description = "Content types to show"
 other = "Content types to show"
@@ -226,6 +231,10 @@ description = "results"
 one = "result" 
 other = "results"
 
+[Search]
+description = "Search"
+one = "Search" 
+
 [For]
 description = "for"
 one = "for" 
@@ -293,3 +302,75 @@ one = "Time series explorer"
 [Topics]
 description = "Topics"
 one = "Topics"
+
+[EarlierReleases]
+description = "Need an earlier release?"
+one = "Need an earlier release?"
+
+[NationalArchives]
+description = "We moved them to <a href=\"http://webarchive.nationalarchives.gov.uk/20160105160709/http://www.ons.gov.uk/ons/index.html\">The National Archives</a> website, to keep this website as responsive as possible."
+one = "We moved them to <a href=\"http://webarchive.nationalarchives.gov.uk/20160105160709/http://www.ons.gov.uk/ons/index.html\">The National Archives</a> website, to keep this website as responsive as possible."
+
+[HistoricalDataNote]
+description = "<strong>Please note: </strong>all historical data is still on this website."
+one = "<strong>Please note: </strong>all historical data is still on this website."
+
+[SearchKeywords]
+description = "Search keywords"
+one = "Search keywords"
+
+[PreviousReleases]
+description = "Previous releases"
+one = "Previous releases"
+
+[ShowAllReleases]
+description = "Show all releases over time (only showing latest one of each by default)"
+one = "Show all releases over time (only showing latest one of each by default)"
+
+[LastUpdate]
+description = "Last update"
+one = "Last update"
+
+[SelectLastUpdated]
+description = "Select last updated"
+one = "Select last updated"
+
+[Today]
+description = "Today"
+one = "Today"
+
+[LastSevenDays]
+description = "Last 7 Days"
+one = "Last 7 Days"
+
+[LastMonth]
+description = "Last Month"
+one = "Last Month"
+
+[Custom]
+description = "Custom"
+one = "Custom"
+
+[Dates]
+description = "Dates"
+one = "Dates"
+
+[ReleasedAfter]
+description = "Released after"
+one = "Released after"
+
+[Day]
+description = "Day"
+one = "Day"
+
+[Month]
+description = "Month"
+one = "Month"
+
+[Year]
+description = "Year"
+one = "Year"
+
+[ReleasedBefore]
+description = "Released before"
+one = "Released before"
