adds translations for data aggregation results
Signed-off-by: lindenmckenzie <linden.mckenzie@ons.gov.uk>

--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -373,3 +373,15 @@ one = "Year"
 [ReleasedBefore]
 description = "Released before"
 one = "Released before"
+
+[LoadingResults]
+description = "Loading search results"
+one = "Loading search results"
+
+[ImportantInformation]
+description = "Important information: "
+one = "Important information: "
+
+[SelectAll]
+description = "Select all"
+one = "Select all"
