localizes filter template strings

--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -386,3 +386,7 @@ one = "Important information: "
 [SelectAll]
 description = "Select all"
 one = "Select all"
+
+[ShowResults]
+description = "Show results"
+one = "Show results"
