--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -385,3 +385,7 @@ one = "Important information: "
 [SelectAll]
 description = "Select all"
 one = "Select all"
+
+[ShowResults]
+description = "Show results"
+one = "Show results"
