pushes missing translations
Signed-off-by: lindenmckenzie <linden.mckenzie@ons.gov.uk>

--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -393,6 +393,7 @@ one = "Select all"
 [ShowResults]
 description = "Show results"
 one = "Show results"
+other = "Show results"
 
 [Selection]
 description = "Selection"
