--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -394,6 +394,7 @@ one = "Select all"
 [ShowResults]
 description = "Show results"
 one = "Show results"
+other = "Show results"
 
 [Selection]
 description = "Selection"
