--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -359,6 +359,10 @@ one = "Custom"
 description = "Dates"
 one = "Dates"
 
+[DateFilterDescription]
+description = "For example: 2006 or 19 07 2010"
+one = "For example: 2006 or 19 07 2010"
+
 [ReleasedAfter]
 description = "Released after"
 one = "Released after"
