Add translations for sort and rss

--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -467,3 +467,11 @@ one = "ID y gyfres"
 description = "Series ID"
 other = "ID y set ddata"
 one = "ID y set ddata"
+
+[SubscriptionLinkRSS]
+description = "RSS feed"
+one = "RSS feed"
+
+[SortByLabel]
+description = "Sort by"
+one = "Trefnu yn ôl"
