Add alt text to rss icon

--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -472,6 +472,10 @@ one = "ID y set ddata"
 description = "RSS feed"
 one = "RSS feed"
 
+[SubscriptionLinkRSSIcon]
+description = "RSS feed icon"
+one = "RSS feed icon"
+
 [SortByLabel]
 description = "Sort by"
 one = "Trefnu yn ôl"
