--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -479,3 +479,19 @@ one = "RSS feed icon"
 [SortByLabel]
 description = "Sort by"
 one = "Trefnu yn ôl"
+
+[ValidationPatternMismatch]
+description = "Enter a number for released {{fieldset}} {{field}}"
+one = "Enter a number for released {{.arg0}} {{.arg1}}"
+
+[ValidationYearMissing]
+description = "Enter the released {{fieldset}} year"
+one = "Enter the released {{.arg0}} year"
+
+[ValidationInvalidDate]
+description = "Enter a real date"
+one = "Enter a real date"
+
+[ValidationInvalidDateRange]
+description = "Enter a released before year that is later than (after year value injected by JS)"
+one = "Enter a released before year that is later than"
