add 'related data' to locale files

--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -500,3 +500,7 @@ one = "Enter a released before year that is later than"
 [LatestRelease]
 description = "Latest release"
 one = "Latest release"
+
+[RelatedData]
+description = "Related data"
+one = "Related data"
