add 'All data related to' to locales files

--- a/assets/locales/service.cy.toml
+++ b/assets/locales/service.cy.toml
@@ -503,3 +503,7 @@ one = "Latest release"
 [RelatedData]
 description = "Related data"
 one = "Related data"
+
+[AllDataRelatedTo]
+description = "All data related to"
+one = "All data related to"
