--- a/assets/locales/service.en.toml
+++ b/assets/locales/service.en.toml
@@ -146,6 +146,11 @@ description = "Compendiums"
 one = "Compendium"
 other = "Compendiums"
 
+[StatisticalArticle]
+description = "Statistical article"
+one = "Statistical article"
+other = "Statistical articles"
+
 [TimeSeries]
 description = "Time series"
 one = "Time series"
